--- a/docs/.vscode/settings.json
+++ b/docs/.vscode/settings.json
@@ -26,7 +26,10 @@
         "metacognitivo",
         "n",
         "nica",
+        "optimizaci",
+        "optimización",
         "osciloscopio",
+        "perfilamiento",
         "println",
         "prototipado",
         "renderizando",
