--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
     "restructuredtext.confPath": "${workspaceFolder}/docs",
-    "python.pythonPath": "/usr/bin/python"
+    "python.pythonPath": "/usr/bin/python",
+    "cSpell.words": [
+        "n",
+        "optimizaci",
+        "optimización",
+        "perfilamiento",
+        "retroalimentaci",
+        "retroalimentación"
+    ]
 }
