--- a/docs/.vscode/settings.json
+++ b/docs/.vscode/settings.json
@@ -17,6 +17,7 @@
         "asincrónica",
         "asincrónico",
         "bloqueantes",
+        "conceptualmente",
         "evaluativo",
         "inal",
         "inalámbricos",
