Unit 2 add ex 19

--- a/docs/.vscode/settings.json
+++ b/docs/.vscode/settings.json
@@ -18,6 +18,7 @@
         "asincrónico",
         "bloqueantes",
         "conceptualmente",
+        "escalabilidad",
         "evaluativo",
         "inal",
         "inalámbricos",
