add some words to dictionary

--- a/docs/.vscode/settings.json
+++ b/docs/.vscode/settings.json
@@ -18,6 +18,8 @@
         "asincrónico",
         "bloqueantes",
         "conceptualmente",
+        "corutina",
+        "corutinas",
         "escalabilidad",
         "evaluativo",
         "inal",
