--- a/docs/.vscode/settings.json
+++ b/docs/.vscode/settings.json
@@ -31,6 +31,7 @@
         "n",
         "nica",
         "optimizaci",
+        "optimizaciones",
         "optimización",
         "osciloscopio",
         "perfilamiento",
