--- a/docs/.vscode/settings.json
+++ b/docs/.vscode/settings.json
@@ -12,6 +12,7 @@
         "LEDs",
         "Modelamiento",
         "N",
+        "PERFILADOR",
         "actuador",
         "asincr",
         "asincrónica",
