Add Unit2 section 3

--- a/docs/.vscode/settings.json
+++ b/docs/.vscode/settings.json
@@ -3,38 +3,39 @@
     "cSpell.language": "en,es",
     "python.pythonPath": "/bin/python",
     "cSpell.words": [
-        "AUTOEVALUACI",
-        "AUTOEVALUACIÓN",
-        "Ardity",
-        "Autoevaluar",
-        "Encapsulamiento",
-        "Higuita",
-        "LEDs",
-        "Modelamiento",
-        "N",
-        "PERFILADOR",
         "actuador",
+        "Ardity",
         "asincr",
         "asincrónica",
         "asincrónico",
+        "AUTOEVALUACI",
+        "AUTOEVALUACIÓN",
+        "Autoevaluar",
         "bloqueantes",
         "conceptualmente",
         "corutina",
         "corutinas",
+        "creacional",
+        "Encapsulamiento",
         "escalabilidad",
         "evaluativo",
+        "Higuita",
         "inal",
         "inalámbricos",
         "inicializaci",
         "inicialización",
+        "LEDs",
         "mbricos",
         "metacognitivo",
+        "Modelamiento",
         "n",
+        "N",
         "nica",
         "optimizaci",
-        "optimizaciones",
         "optimización",
+        "optimizaciones",
         "osciloscopio",
+        "PERFILADOR",
         "perfilamiento",
         "println",
         "prototipado",
