--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "perfilamiento",
         "retroalimentaci",
         "retroalimentación"
-    ]
+    ],
+    "cSpell.language": "en,es",
 }
