--- a/docs/.vscode/settings.json
+++ b/docs/.vscode/settings.json
@@ -47,5 +47,6 @@
         "sincronización",
         "sumativas",
         "sumativo"
-    ]
+    ],
+    "esbonio.sphinx.confDir": "${workspaceFolder}"
 }
